[package]
name = "maze-generator-two"
version = "0.2.0"
authors = ["Rishvic Pushpakaran <rishvic@gmail.com>"]
edition = "2018"
description = "Webassembly module generating mazes using various algorithms"
readme = "README.md"
repository = "https://github.com/Colocasian/maze-generator-two/"
license = "ISC"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.73"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
wee_alloc = { version = "0.4.5", optional = true }

bit-vec = { version = "0.6", default-features = false }

[dependencies.rand]
version = "0.8.3"
default-features = false
features = ["small_rng"]

[dev-dependencies]
wasm-bindgen-test = "0.3.23"

[profile.release]
opt-level = 3
